[package]
name = "bot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = { version = "0.19", default-features = false, features = ["async-http-client"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"