[package]
name = "bot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = { version = "0.19", default-features = false, features = ["async-http-client"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
url = "2.2.2"
reqwest = { version = "0.11.7", features = ["json"] }
serde_json = "1.0.73"
serde = { version = "1.0.132", features = ["derive"] }
firebase-rs = "2.0.1"